--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <h1>putri</h1>
 <a href="login.html">menuju halaman login</a>
+<a href="profile.html">menuju halaman profile</a>
 </body>
 </html>
